fix config when start

--- a/index.html
+++ b/index.html
@@ -352,8 +352,8 @@
 				this.loadCurrentSong();
 				this.render()
 
-				if(isRandom) randomButton.classList.toggle("active")
-				if(isActive) repeatButton.classList.toggle("active")
+				if(isRandom) randomButton.classList.add("active")
+				if(isActive) repeatButton.classList.add("active")
 			}
 		}
 		app.start();
