--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 				this.render()
 
 				if(isRandom) randomButton.classList.add("active")
-				if(isActive) repeatButton.classList.add("active")
+				if(isRepeat) repeatButton.classList.add("active")
 			}
 		}
 		app.start();
